solved some Alignment problem.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -281,7 +281,7 @@ li {
 
 .apply-button {
   img {
-    width: 9.5px !important;
+    width: 8px !important;
   }
 }
 
